# 24ur-api

./: .flake8  .gitignore  Makefile  Pipfile  README.md  flake.nix  pyproject.toml  shell.nix  snippet.py  temp.json
.github/workflows/: build.yaml  lint.yaml  publish.yaml
api_24ur/: __init__.py  client.py  downloader.py  exceptions.py  schemas.py  scraper.py  types.py
nix/: build.nix  checks.nix  python.nix  shell.nix
scripts/: example.py
