[project]
name = "24ur-api"
description = "Unofficial 24ur API"
version = "0.2.2"
readme = "README.md"
authors = [{ name = "Amadej Kastelic", email = "amadejkastelic7@gmail.com" }]
requires-python = "~=3.8"
keywords = ["24ur", "api", "scraper"]
dependencies = ["aiohttp<4", "beautifulsoup4<5"]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/amadejkastelic/24ur-api"
"Source" = "https://github.com/amadejkastelic/24ur-api"
"Tracker" = "https://github.com/amadejkastelic/24ur-api/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
video = ["yt-dlp"]
dev = ["black", "flake", "packaging"]
lint = ["flake8>=7.1.1", "black>=24.1.0"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
skip-string-normalization = true
