[project]
name = "24ur-api"
description = "Unofficial 24ur API"
version = "0.2.2"
readme = "README.md"
authors = [{ name = "Amadej Kastelic", email = "amadejkastelic7@gmail.com" }]
requires-python = "~=3.8"
keywords = ["24ur", "api", "scraper"]
dependencies = ["aiohttp<4"]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/amadejkastelic/24ur-api"
"Source" = "https://github.com/amadejkastelic/24ur-api"
"Tracker" = "https://github.com/amadejkastelic/24ur-api/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
video = ["yt-dlp"]
dev = ["ruff", "packaging"]

[tool.setuptools.packages.find]
include = ["api_24ur"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
